ac1dsworld/sabnzbd/15.0.9/CHANGELOG.md
**Important:**
*for the complete changelog, please refer to the website*




## [sabnzbd-15.0.9](https://github.com/truecharts/charts/compare/sabnzbd-15.0.8...sabnzbd-15.0.9) (2023-10-29)

### Chore

- update helm general non-major ([#14094](https://github.com/truecharts/charts/issues/14094))
  
  


## [sabnzbd-15.0.8](https://github.com/truecharts/charts/compare/sabnzbd-15.0.6...sabnzbd-15.0.8) (2023-10-28)

### Chore

- Fix typo in categories and make them singular ([#13693](https://github.com/truecharts/charts/issues/13693))
  
  


## [sabnzbd-15.0.6](https://github.com/truecharts/charts/compare/sabnzbd-15.0.5...sabnzbd-15.0.6) (2023-10-13)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.1.0 ([#13586](https://github.com/truecharts/charts/issues/13586))
  
  


## [sabnzbd-15.0.5](https://github.com/truecharts/charts/compare/sabnzbd-15.0.4...sabnzbd-15.0.5) (2023-10-08)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.1.0 ([#13391](https://github.com/truecharts/charts/issues/13391))
  
  


## [sabnzbd-15.0.4](https://github.com/truecharts/charts/compare/sabnzbd-15.0.3...sabnzbd-15.0.4) (2023-10-07)

### Chore

- update helm general non-major ([#13386](https://github.com/truecharts/charts/issues/13386))
  
  


## [sabnzbd-15.0.3](https://github.com/truecharts/charts/compare/sabnzbd-15.0.2...sabnzbd-15.0.3) (2023-10-07)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.1.0 ([#13375](https://github.com/truecharts/charts/issues/13375))
  
  


## [sabnzbd-15.0.2](https://github.com/truecharts/charts/compare/sabnzbd-15.0.1...sabnzbd-15.0.2) (2023-09-28)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.1.0 ([#13038](https://github.com/truecharts/charts/issues/13038))
  
  


## [sabnzbd-15.0.1](https://github.com/truecharts/charts/compare/sabnzbd-15.0.0...sabnzbd-15.0.1) (2023-08-30)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.0.3 ([#12052](https://github.com/truecharts/charts/issues/12052))
  
  



## [sabnzbd-15.0.0](https://github.com/truecharts/charts/compare/sabnzbd-14.0.32...sabnzbd-15.0.0) (2023-07-31)




## [sabnzbd-14.0.32](https://github.com/truecharts/charts/compare/sabnzbd-14.0.31...sabnzbd-14.0.32) (2023-07-29)

### Chore

- update helm general non-major ([#10955](https://github.com/truecharts/charts/issues/10955))
  
  


## [sabnzbd-14.0.31](https://github.com/truecharts/charts/compare/sabnzbd-14.0.30...sabnzbd-14.0.31) (2023-07-18)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.0.3 ([#10594](https://github.com/truecharts/charts/issues/10594))
  
