ac1dsworld/sabnzbd/15.0.16/CHANGELOG.md
**Important:**
*for the complete changelog, please refer to the website*




## [sabnzbd-15.0.16](https://github.com/truecharts/charts/compare/sabnzbd-15.0.15...sabnzbd-15.0.16) (2023-12-03)

### Chore

- bump everything to ensure catalog has latest versions
  - fix annotations again
  - update annotations
  - cleanup chart.yaml and add min-max scale version
  
  










## [sabnzbd-15.0.15](https://github.com/truecharts/charts/compare/sabnzbd-15.0.14...sabnzbd-15.0.15) (2023-11-26)

### Chore

- update container image ghcr.io/onedr0p/sabnzbd to 4.1.0[@f2f3971](https://github.com/f2f3971) ([#15387](https://github.com/truecharts/charts/issues/15387))
  
  


## [sabnzbd-15.0.14](https://github.com/truecharts/charts/compare/sabnzbd-15.0.13...sabnzbd-15.0.14) (2023-11-17)




## [sabnzbd-15.0.13](https://github.com/truecharts/charts/compare/sabnzbd-15.0.12...sabnzbd-15.0.13) (2023-11-08)

### Chore

- update helm general non-major ([#14465](https://github.com/truecharts/charts/issues/14465))
  
  


## [sabnzbd-15.0.12](https://github.com/truecharts/charts/compare/sabnzbd-15.0.11...sabnzbd-15.0.12) (2023-11-08)

### Chore

- update helm general non-major ([#14454](https://github.com/truecharts/charts/issues/14454))
  
  


## [sabnzbd-15.0.11](https://github.com/truecharts/charts/compare/sabnzbd-15.0.10...sabnzbd-15.0.11) (2023-11-05)

### Chore

- update helm general non-major ([#14365](https://github.com/truecharts/charts/issues/14365))
  
  


## [sabnzbd-15.0.10](https://github.com/truecharts/charts/compare/sabnzbd-15.0.9...sabnzbd-15.0.10) (2023-11-03)

### Chore

- update helm general non-major ([#14287](https://github.com/truecharts/charts/issues/14287))
  
  


## [sabnzbd-15.0.9](https://github.com/truecharts/charts/compare/sabnzbd-15.0.8...sabnzbd-15.0.9) (2023-10-29)

### Chore

- update helm general non-major ([#14094](https://github.com/truecharts/charts/issues/14094))
  
  


## [sabnzbd-15.0.8](https://github.com/truecharts/charts/compare/sabnzbd-15.0.6...sabnzbd-15.0.8) (2023-10-28)

### Chore

- Fix typo in categories and make them singular ([#13693](https://github.com/truecharts/charts/issues/13693))
  
  


## [sabnzbd-15.0.6](https://github.com/truecharts/charts/compare/sabnzbd-15.0.5...sabnzbd-15.0.6) (2023-10-13)

### Chore

- update container image tccr.io/truecharts/sabnzbd to v4.1.0 ([#13586](https://github.com/truecharts/charts/issues/13586))
